# n6-architecture

./: .doc-rules.json  .gitignore  .own  .papers-cross-repo-lint-exempt  .raw-audit  .raw-ref  .readme-rules.json  .verify_cache.json  CLAUDE.md  CONTRIBUTING.md  INDEX.json  Makefile  README.md  README.md.sealed.hash  consciousness_constraints.py  drift-rules.json  hive.json  model_utils.py  project.hexa
domains/sedi/: .gitignore  .zenodo.json  CITATION.cff  CLAUDE.md  README.md  SEDI-README.md  consciousness_bridge.hexa  consciousness_bridge.py  pyproject.toml  test_null_calibration.hexa  test_null_calibration.py
domains/sedi/docs/: BREAKTHROUGH-STRATEGY.md  anima-sedi-cross-discovery.md  anima-tuning-scan-report-2026-03-30.md  cern-submission.md  cross-discovery-triangular.md  discovery-algorithm-sedi.md  n6-sedi-bridge.md  n6-universality-thesis.md  parallel-verification-2026-03-27.md  pre-registered-predictions.md  seti-verification-2026-03-28.md  triangular-bridge.md
domains/sedi/scripts/: anima_cross_discovery.hexa  anima_cross_discovery.py  auto_grade_n6.hexa  auto_grade_n6.py  auto_hypothesis.hexa  auto_hypothesis.py  bl_signal_scan.hexa  bl_signal_scan.py  ckm_bridge_analysis.hexa  ckm_bridge_analysis.py  cross_pipeline.hexa  cross_pipeline.py  desi_bao_scan.hexa  desi_bao_scan.py  discovery_full.sh  discovery_pipeline.sh  discovery_quick.sh  factorial_vs_perfect.hexa  factorial_vs_perfect.py  infinite_growth.sh  lhc_run3_check.hexa  lhc_run3_check.py  n6_hunt.hexa  n6_hunt.py  sedi_n6_scan.hexa  sedi_n6_scan.py  self_improve.hexa  self_improve.py  sync_to_atlas.py  temporal_health.hexa  temporal_health.py  tier_cd_recheck.hexa  tier_cd_recheck.py
domains/sedi/sedi/: __init__.hexa  __init__.py  accel.hexa  accel.py  cli.hexa  cli.py  consciousness_receiver.hexa  consciousness_receiver.py  constants.hexa  cross_correlator.hexa  cross_correlator.py  dashboard.hexa  dashboard.py  dashboard_data.hexa  dashboard_data.py  detector.hexa  detector.py  eeg_consciousness.hexa  eeg_consciousness.py  filter.hexa  filter.py  historical.hexa  historical.py  monitor.hexa  monitor.py  n6_tracker.hexa  n6_tracker.py  ph_detector.hexa  ph_detector.py  receiver.hexa  receiver.py  seti_scanner.hexa  seti_scanner.py  statistics.hexa  statistics.py  tecs.hexa  tecs.py
domains/sedi/sedi-core/: Cargo.toml  pyproject.toml
domains/sedi/sources/: verify_hdna_fermion_six.py  verify_hdna_physics_expansion.py
domains/sedi/tests/: __init__.hexa  test_anima_tuning.hexa  test_anima_tuning.py
domains/sedi/tools/: Cargo.toml
nexus/: CLAUDE.md  Cargo.toml  _registry.json
nexus/examples/: hexa_gate_breakthrough.rs
nexus/origins/: CLAUDE.md
nexus/origins/chip-n6-calc/: main.hexa
nexus/origins/chip-perf-calc/: main.hexa
nexus/origins/dimension-perception/: index.html
nexus/origins/energy-calc/: energy_strategy_n6_analysis.hexa  main.hexa
nexus/origins/gpu-arch-calc/: chip_design_n6_analysis.hexa
nexus/origins/hexa-rtl/: Makefile
nexus/scripts/: benchmark_all_tools.sh  infinite_growth.sh
nexus/src/: lib.rs  main.rs  module_tests.rs  python.rs
nexus/tests/: experiment_test.rs  telescope_test.rs
tools/nexus6/: Cargo.toml
(+6194 files in other folders)
