[workspace]
# NEXUS-6 워크스페이스 — 모든 계산기/분석기/HEXA 도구의 단일 진입점
members = [".", "crates/dashboard"]
resolver = "2"

[package]
name = "nexus"
version = "0.1.0"
edition = "2021"
description = "NEXUS-6 discovery engine — 62 크레이트 통합 단일 바이너리"

[lib]
name = "nexus"
crate-type = ["lib", "cdylib"]
# cdylib = Python 모듈 (.so/.dylib) 생성 필수
# maturin build --release --features python

[[bin]]
name = "nexus"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }

[features]
default = []
python = ["pyo3", "numpy"]

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
