[package]
name = "nexus6"
version = "0.1.0"
edition = "2021"
description = "NEXUS-6 discovery engine — Metal GPU compute infrastructure"

[lib]
name = "nexus6"
crate-type = ["lib"]
# For Python wheel builds, use: maturin build --features python
# maturin automatically adds cdylib crate-type

[[bin]]
name = "nexus6"
path = "src/main.rs"

[dependencies]
rayon = "1.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }

[features]
default = []
python = ["pyo3"]

[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
