[package]
name = "sedi_core"
version = "0.1.0"
edition = "2021"
description = "Rust acceleration core for SEDI real-time FFT processing"
license = "MIT"

[lib]
name = "sedi_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
rustfft = "6.2"
num-complex = "0.4"

[features]
default = ["pyo3/auto-initialize"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
